k8s-playground-disabled/gotify/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gotify
  labels:
    app: gotify
    environment: playground
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
