k8s-playground-disabled/gotify/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gotify-ingress
  namespace: gotify
  annotations:
    argocd.argoproj.io/sync-wave: "2"
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: "web"
spec:
  rules:
    - host: gotify.nasat.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gotify
                port:
                  number: 80
